--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   <title>SkyWayチュートリアル</title>
 </head>
 <body>
-  <video id="my-video" width="400px" autoplay muted playsinline></video>
+  <video id="my-video" width="400px" autoplay playsinline></video>
   <p id="my-id"></p>
 
   <textarea id="their-id"></textarea>
   <button id="make-call">発信</button>
-  <video id="their-video" width="400px" autoplay muted playsinline></video>
+  <video id="their-video" width="400px" autoplay playsinline></video>
 
 
  <script>
   let localStream;
 
   // カメラ映像取得
-  navigator.mediaDevices.getUserMedia({video: true, audio: true})
+  navigator.mediaDevices.getUserMedia({video: true, audio: {echoCancellation : true,echoCancellationType :'system',noiseSuppression : true}})
     .then( stream => {
     // 成功時にvideo要素にカメラ映像をセットし、再生
     const videoElm = document.getElementById('my-video');
