--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>SkyWayチュートリアル</title>
 </head>
 <body>
-  <video id="my-video" width="400px" autoplay playsinline></video>
+  <video id="my-video" width="400px" autoplay muted playsinline></video>
   <p id="my-id"></p>
 
   <textarea id="their-id"></textarea>
