--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
     
       shareButton.onclick = () => {
       const sstream = navigator.mediaDevices.getDisplayMedia({ video: true });
-      const roomID = document.getElementById('room-id').value;
-      const roomOptions = {mode:"mesh",stream:sstream};
-      const meshRoom = peer.joinRoom(roomID,roomOptions);
+      //const roomID = document.getElementById('room-id').value;
+      //const roomOptions = {mode:"mesh",stream:sstream};
+      //const meshRoom = peer.joinRoom(roomID,roomOptions);
+      meshRoom.replaceStream(sstream);
     };
 
 
